Very HTML & CSS done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <main>
+      <div class="bg">
+        <h1>JavaScript Methods Quiz!</h1>
+        <div class="grid-container">
+          <div class="grid-iteam-1 question-1 option">Option</div>
+          <div class="grid-iteam-2 question-2 option">Option</div>
+          <div class="grid-iteam-3 question-3 option">Option</div>
+          <div class="grid-iteam-4 question-4 option">Option</div>
+        </div>
+        <button class="check-btn">Check</button>
+        <div class="score-container">
+          <div class="score-label">Score: <span class="score">3</span></div>
+          <div class="timer">1:33</div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
