Basic js, queArr, dom access

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <main>
       <div class="bg">
         <h1>JavaScript Methods Quiz!</h1>
+        <div class="questions">
+          <p class="question">
+            What method would I use to change all the letters to upper case?
+          </p>
+        </div>
         <div class="grid-container">
-          <div class="grid-iteam-1 question-1 option">Option</div>
-          <div class="grid-iteam-2 question-2 option">Option</div>
-          <div class="grid-iteam-3 question-3 option">Option</div>
-          <div class="grid-iteam-4 question-4 option">Option</div>
+          <div class="grid-iteam-1 answer-1 option">Option</div>
+          <div class="grid-iteam-2 answer-2 option">Option</div>
+          <div class="grid-iteam-3 answer-3 option">Option</div>
+          <div class="grid-iteam-4 answer-4 option">Option</div>
         </div>
         <button class="check-btn">Check</button>
         <div class="score-container">
