--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           </p>
         </div>
         <div class="grid-container">
-          <div class="grid-iteam-1 answer-1 option">Option</div>
-          <div class="grid-iteam-2 answer-2 option">Option</div>
-          <div class="grid-iteam-3 answer-3 option">Option</div>
-          <div class="grid-iteam-4 answer-4 option">Option</div>
+          <div class="grid-item-1 answer-1 option">Option</div>
+          <div class="grid-item-2 answer-2 option">Option</div>
+          <div class="grid-item-3 answer-3 option">Option</div>
+          <div class="grid-item-4 answer-4 option">Option</div>
         </div>
-        <button class="check-btn">Check</button>
+        <!-- <button class="check-btn">Check</button> -->
         <div class="score-container">
           <div class="score-label">Score: <span class="score">3</span></div>
           <div class="timer">1:33</div>
