--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="bg">
-        <h1>JavaScript Methods Quiz!</h1>
+        <h1>Math Quiz!</h1>
         <div class="questions">
           <p class="question">
             What method would I use to change all the letters to upper case?
@@ -24,7 +24,7 @@
         </div>
         <!-- <button class="check-btn">Check</button> -->
         <div class="score-container">
-          <div class="score-label">Score: <span class="score">3</span></div>
+          <div class="score-label">Score: <span class="score">0</span>/5</div>
           <div class="timer">1:33</div>
         </div>
       </div>
