Added correct and incorrect message displays

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div class="score-label">Score: <span class="score">0</span>/5</div>
           <div class="timer">1:33</div>
         </div>
+        <div class="check"></div>
       </div>
     </main>
     <script src="script.js"></script>
